# libdrm

./: .gitignore  build.sh  xf86drm.h  xf86drmMode.c  xf86drmMode.h
exynos/: Makefile.am  exynos-symbol-check  exynos-symbols.txt  exynos_drm.c  exynos_drm.h  exynos_drmif.h  exynos_fimg2d.c  exynos_fimg2d.h  exynos_ipp.c  exynos_ipp.h  libdrm_exynos.pc.in
tests/exynos/: Makefile.am  exynos_fimg2d_event.c  exynos_fimg2d_perf.c  exynos_fimg2d_rop.c  exynos_fimg2d_test.c  exynos_fimg2d_thread_scale.c  exynos_fimg2d_verify_copy.c  exynos_ipp_rotate.c  exynos_ipp_test.c  exynos_mixer_cfg.c  meson.build
tests/modetest/: buffers.c  meson.build  modetest.c
